Revision history for FontFactory::Type1

{{$NEXT}}
    - Added clarification of terminology compared to that of FreeType
    - Corrected the name of the Unicode font factory module to: FontFactory (removed the '::TT')
    - Removed the square brackets around the Fonts hash

1.0.1  2023-05-22T18:10:32-05:00
    - Added new DocFont methods currently not found in Font::AFM:
      + StringBBox (actually added in v1.0.0 but it was missing from Changes)
    - Corrected a typo in the docs

1.0.0  2023-05-21T14:33:55-05:00
    - Changed 'MyFonts' to 'Fonts'
    - All DocBox methods have correct adjustments for scale factor
    - Corrected scale factor calculations
    - Added more rigorous tests for application of scale factor
    - Split DocFont and BaseFont classes into their own files
    - Renamed file 'Utils.rakumod' to 'Subs.rakumod'
    - Put the font list into new file FontList.rakumod as template
      for upcoming Build method for module FontFactory::TT
    - Added new DocFont methods currently not found in Font::AFM:
      + StrikethroughPosition - at the midpoint height of the 'm' character
      + StrikethroughThickness - same as UnderlineThickness
      + LineHeight - the maximum vertical space required for any single line of 
        text or, optionally, for a specific string
      + TopBearing    - topmost stroke of the font's BBox or the optional input string
      + BottomBearing - bottommost stroke of the font's BBox or the optional input string
      + LeftBearing   - leftmost stroke of the first character in input string
      + RightBearing  - rightmost stroke of the first character in the input string

        Note bearing distances are in points from the appropiate origin: first character in
        any input string for the left- and right-bearing, highest character for the
        top-bearing, lowest character for bottom-bearing, and the FontBBox
        for no string

0.0.1  2023-04-30T19:50:06-05:00
    - Initial version